Updated paper citation in READ ME

--- a/README
+++ b/README
@@ -62,4 +62,4 @@ then
 
 ## Citing UPS-indel
 	If you use UPS-indel, please cite the following paper:
-	Hasan, Mohammad Shabbir, Xiaowei Wu, Layne T. Watson, and Liqing Zhang. "UPS-indel: A Universal Positioning System For Indels." bioRxiv (2017): 133553.
+	Hasan, Mohammad Shabbir, Xiaowei Wu, Layne T. Watson, and Liqing Zhang. "UPS-indel: A Universal Positioning System For Indels." Scientific Reports. 2017 Oct 26;7(1):14106.
